--- a/src/main/resources/console.properties
+++ b/src/main/resources/console.properties
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-<entry key="welcome">Welcome to LibrisApp! Enter a command like: checkin <ISBN>, checkout <ISBN>, list, help, or quit.</entry>
+<entry key="welcome">Welcome to LibrisApp! Enter a command like: checkin &lt;ISBN&gt;, checkout &lt;ISBN&gt;, list, help, or quit.</entry>
 <entry key="prompt">Enter command: </entry>
 <entry key="invalid">Invalid input. Try again or type help for options.</entry>
 <entry key="help">Available commands: filter, list, help, checkin, checkout, exit.</entry>
 <entry key="cmd_show">Displays the current working list of books.</entry>
-<entry key="filter_help">Use filter <field>=<value> to find books. Fields: title, author, category, isbn.</entry>
+<entry key="filter_help">Use filter &lt;field&gt;=&lt;value&gt; to find books. Fields: title, author, category, isbn.</entry>
 <entry key="cmd_sort_option">::sort</entry>
 <entry key="goodbye">Goodbye! Thanks for using LibrisApp.</entry>
-<entry key="list_help">List commands: add <isbn>, remove <isbn>, clear, checkout [isbn], checkin [isbn]. Leave ISBN blank to checkin/checkout all in list.</entry>
+<entry key="list_help">List commands: add &lt;isbn&gt;, remove &lt;isbn&gt;, clear, checkout [isbn], checkin [isbn]. Leave ISBN blank to checkin/checkout all in list.</entry>
 <entry key="invalid_list">Book not found in list or invalid list operation: </entry>
 <entry key="cmd_exit">exit</entry>
 <entry key="cmd_help">help</entry>
