--- a/src/main/resources/console.properties
+++ b/src/main/resources/console.properties
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-<entry key="welcome">Welcome to LibrisApp! Enter a command like: checkin &lt;ISBN&gt;, checkout &lt;ISBN&gt;, list, help, or quit.</entry>
+<entry key="welcome">Welcome to LibrisApp! Enter a command like: checkin &lt;ISBN&gt;, checkout &lt;ISBN&gt;, list, help, or exit.</entry>
 <entry key="prompt">Enter command: </entry>
 <entry key="invalid">Invalid input. Try again or type help for options.</entry>
 <entry key="help">Available commands: filter, list, help, checkin, checkout, exit.</entry>
-<entry key="cmd_show">Displays the current working list of books.</entry>
+<entry key="cmd_show">show</entry>
 <entry key="filter_help">Use filter &lt;field&gt;=&lt;value&gt; to find books. Fields: title, author, category, isbn.</entry>
 <entry key="cmd_sort_option">::sort</entry>
 <entry key="goodbye">Goodbye! Thanks for using LibrisApp.</entry>
